# GamePainter

./: BUILD.gn  README.md  compile.txt  config.gni  main.cpp  readme.md  win.h  框架2.7C开发参考文档.doc
gn/standalone/: BUILD.gn  BUILDCONFIG.gn  proto_library.gni  wasm.gni
gn/standalone/toolchain/: BUILD.gn  win_find_msvc.py
lua/: compile.txt  lua_machine.cpp  lua_machine.h  test.cpp
lua/ext/: lutf8lib.c
noumenon/: BUILD.gn  main.cpp
noumenon/lua/: BUILD.gn  compile.md  test_lua_wrapper.cpp
noumenon/lua/ext/: BUILD.gn  utf8.c
noumenon/lua/src/: BUILD.gn
noumenon/ui/: BUILD.gn  win.h
noumenon/utils/: BUILD.gn  codec.cpp  codec.h
src/: BUILD.gn  main.cpp
src/lua/: BUILD.gn  compile.md  lua_machine.h
src/lua/src/: BUILD.gn
src/ui/: BUILD.gn  test_windows_wrapper.cpp  win.cpp
src/utils/: BUILD.gn
test/Config/: config.lua
test/GameLive/: AnimationX.lua  Assets.lua  Button.lua  FoodSaler.lua  Game.lua  Life.lua  Map.lua  Monster.lua  MuMu.lua  UI.lua  World.lua
usage/GameLive/: Animation.lua  Bear.lua  Board.lua  Define.lua  EastHero.lua  Game.lua  Legend.lua  Map.lua  NPC.lua  State.lua  TextBox.lua
utils/: codec.cpp
utils/include/: codec.h
引擎源程序2.5X/: GamePainter.aps  GamePainter.cpp  GamePainter.h  GamePainter.rc  GamePainter.sln  GamePainterDoc.h  GamePainterView.cpp  GamePainterView.h  LuaBox.h  MainFrm.cpp  MusicBox.cpp  MusicBox.h  resource.h
引擎源程序2.5X/CxImage/Include/: stdint.h  ximage.h  ximapsd.h
引擎源程序2.5X/CxImage/lib/: libdcr.lib  libpsd.lib  png.lib
引擎源程序2.5X/res/: GamePainter.rc2
引擎源程序2.7/: GamePainter.vcproj  GamePainterDoc.cpp  GamePainterView.cpp
引擎源程序2.7/CxImage/Include/: ximacfg.h
引擎源程序2.7/CxImage/lib/: Tiff.lib  cximage.lib  zlib.lib
引擎源程序2.7/LuaLib/: LuaX.lib
引擎源程序2.7C/: ClassDiagram1.cd  GamePainter.aps  GamePainter.ncb  GamePainter.rc  GamePainterView.cpp  LuaBox.cpp  MainFrm.h  ReadMe.txt  stdafx.cpp  stdafx.h
引擎源程序2.7C/CxImage/Include/: ximadef.h
引擎源程序2.7C/CxImage/lib/: Jpeg.lib  cximage动态.lib  jasper.lib  jbig.lib  mng.lib
游戏框架包A/GameLive/: Animation.lua  Bear.lua  Board.lua  Button.lua  Define.lua  Game.lua  Legend.lua  Life.lua  Map.lua  Me.lua  Monster.lua  MuMu.lua  NPC.lua  NPCs.lua  Number.lua  Res.lua  State.lua  TextBox.lua  Timer.lua  UI.lua
游戏框架包A/更新与说明/: 模块征集.txt
游戏框架包B/Config/: config.lua
游戏框架包B/GameLive/: Animation.lua  Bear.lua  Board.lua  Button.lua  Define.lua  Game.lua  Legend.lua  Life.lua  Map.lua  Me.lua  Monster.lua  MuMu.lua  NPC.lua  NPCs.lua  Res.lua  State.lua  TextBox.lua  UI.lua  World.lua
班级信息管理/ClassInfo/: 能动1401班.lua  能动1402班.lua  能动1403班.lua  能动1405班.lua
班级信息管理/GameLive/: Board.lua  Button.lua  ClassCard.lua  Define.lua  EditCtrl.lua  FindFile.lua  Game.lua  GridCard.lua  OSFindFile.lua  Res.lua  Searcher.lua  SlideBar.lua  TextBox.lua  UI.lua  World.lua
班级信息管理/GameRes/cursor/: cur1.cur
班级信息管理/说明/: 操作说明.txt
粒子群实验/: 更新地址.txt
粒子群实验/GameLive/: Atom.lua  Define.lua  Game.lua  Res.lua  World.lua
网络搜索实验/: 框架参考文档2.5.doc
网络搜索实验/GameLive/: Game.lua  Res.lua  SlideBar.lua
网络搜索实验/GameRes/cursor/: blue.cur
