import("//config.gni")

config("game_painter_config") {
    libs = [
        "gdiplus.lib",
        "winmm.lib",
        "Imm32.lib",
    ]
    defines = []
}

executable("GamePainter") {
    sources = [ "main.cpp" ]
    configs += [ ":game_painter_config" ]
    public_deps = [
        "ui:windows_wrapper",
        "lua:lua_wrapper",
        "utils:utils",
    ]
}
