import("//config.gni")

config("game_painter_config") {
    include_dirs = [
        "//src/ui",
        "//src/lua",
        "//src/utils",
    ]
    libs = [
        "gdiplus.lib",
        "winmm.lib",
        "Imm32.lib",
    ]
    defines = []
}

executable("GamePainter") {
    sources = [ "main.cpp" ]
    configs += [ ":game_painter_config" ]
    deps = [
        "ui:windows_wrapper",
        "lua:lua_wrapper",
        "utils:utils",
    ]
}
