import("//config.gni")

config("windows_wrapper_config") {
    include_dirs = [ "./" ]
}

source_set("windows_wrapper") {
    public_configs = [ ":windows_wrapper_config" ]
    libs = [
        "user32.lib",
        "gdi32.lib",
    ]
    sources = [ "win.cpp" ]
}

executable("test_windows_wrapper") {
    sources = [ "test_windows_wrapper.cpp" ]
    public_deps = [ ":windows_wrapper" ]
}
