import("//config.gni")

source_set("lua_wrapper") {
    sources = [ "lua_machine.cpp" ]
    public_deps = [ "src:lua" ]
}

executable("lua_wrapper_test") {
    include_dirs = [ "//src/utils" ]
    sources = [ "test_lua_wrapper.cpp" ]
    deps = [
        ":lua_wrapper",
        "//src/utils:utils",
    ]
}
